# sistemi-operativi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bthreadlib/: CMakeLists.txt  bthread.c  bthread.h  bthread_private.h  tbarrier.c  tbarrier.h  tcondition.c  tcondition.h  tmutex.c  tmutex.h  tqueue.c  tqueue.h  tsemaphore.c  tsemaphore.h
bthreadlib/barber/: CMakeLists.txt  barber.c
bthreadlib/philosophers/: CMakeLists.txt  philosophers.c
bthreadlib/producer-consumer/: CMakeLists.txt  producerconsumer.c
bthreadlib/producer-consumer-condition/: CMakeLists.txt  producerconsumercondition.c
bthreadlib/reader-writer/: CMakeLists.txt  readerwriter.c
bthreadlib/reader-writer-fair/: CMakeLists.txt  readerwriterfair.c
bthreadlib/test/: CMakeLists.txt  test_bthread.c  test_bthread.h  test_criticalsection.c  test_criticalsection.h  test_main.c  test_tqueue.c  test_tqueue.h  tqueue_test.c
bthreadlib/writer-reader/: CMakeLists.txt  writerreader.c
esempi_iniziali/: cushion.c  example321.c
lab-01/: CMakeLists.txt  main.c
lab-02/: main.c
lab-03/: assembly.sh  main.c
lab-04/: CMakeLists.txt  main.c
serie/esempi_iniziali/: cooperative.c  example322.c
serie/lab-02/: CMakeLists.txt
serie/lab-03/: CMakeLists.txt  main.c
serie/lab-05/: CMakeLists.txt
serie/test-c/: CMakeLists.txt
test-c/: main.c
