project(sistemi-operativi)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_C_STANDARD 99)

add_subdirectory(bthreadlib)
add_subdirectory(bthreadlib/test)
add_subdirectory(bthreadlib/barber)
add_subdirectory(bthreadlib/philosophers)
add_subdirectory(bthreadlib/producer-consumer)
add_subdirectory(bthreadlib/producer-consumer-condition)
